--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,7 +2,7 @@
   <h1>DOJO004</h1>
   <div>
     <h3>Articles</h3>
-    <%= link_to "New Article", new_article_path%>
+    <%= link_to "New Article", new_article_path if current_user.role === "admin"%>
     <div>
       <% @articles.each do |article|%>
         <%= link_to article_path(id: article.id), class:"block p-2 my-4 border rounded-md" do%>
