--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,12 +1,17 @@
 <div class="w-full ">
   <h1>DOJO004</h1>
   <div>
-    <h3>Articles</h3>
-    <%= link_to "New Article", new_article_path if current_user.role === "admin"%>
-    <div>
+    <h3 class="my-4">Articles</h3>
+    <%= link_to "New Article", new_article_path if current_user && current_user.role === "admin"%>
+    <div class="grid grid-cols-1 gap-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
       <% @articles.each do |article|%>
-        <%= link_to article_path(id: article.id), class:"block p-2 my-4 border rounded-md" do%>
-          <%= article.title%>
+        <%= link_to article_path(id: article.id), class:"block p-2 my-4 border rounded-xl" do%>
+          <% if article.cover_photo.attached? %>
+            <%= image_tag rails_representation_url(article.cover_photo), class:"w-32 mx-auto rounded-md" %>
+          <% else %>
+            <%= image_tag "https://picsum.photos/200", class:"w-32 mx-auto rounded-md" %>
+          <% end %>
+          <p class="my-2"><%= article.title%></p> 
         <% end %>
       <% end %>
     </div>
