--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,7 @@
 <div class="w-full ">
   <div class="flex justify-between">
     <%= link_to "back", articles_path%>
-    <%= link_to "Edit", edit_article_path(id: params[:id]) if current_user.role === "admin"%>
+    <%= link_to "Edit", edit_article_path(id: params[:id]) if current_user && current_user.role === "admin"%>
   </div>
   <div>
     <%= @article.content%>
