add seed and run rubocop

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,5 +17,8 @@
     <main class="flex px-5 mx-auto mt-28">
       <%= yield %>
     </main>
+    <div class="my-4 border rounded-md">
+      <a href="https://zeabur.com?referralCode=DOJO004&utm_source=DOJO004"><img src=https://zeabur.com/deployed-on-zeabur-light.svg alt="Deployed on Zeabur"/></a>
+    </div>
   </body>
 </html>
