--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,11 +14,21 @@
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
     </div>
-    <main class="flex px-5 mx-auto mt-28">
+    <main class="gap-4 px-5 mx-auto md:flex mt-28">
+      <div >
+        <h1>DOJO004</h1>
+        <p class="my-2 text-gray-400">調酒師轉職為軟體工程師的故事...</p>
+        <%= link_to "https://github.com/DOJO004", target: "_blank", class:"w-fit block" do%>
+          <%= image_tag "github.png", class:"w-8 md:w-10 lg:w-12 xl:w-16"%>
+        <% end %>
+      </div>
       <%= yield %>
     </main>
-    <div class="my-4 border rounded-md">
-      <a href="https://zeabur.com?referralCode=DOJO004&utm_source=DOJO004"><img src=https://zeabur.com/deployed-on-zeabur-light.svg alt="Deployed on Zeabur"/></a>
+    <div class="w-full mx-auto my-4 rounded-md md:w-1/2">
+      <p class="text-sm text-center text-gray-400 ">版權所有 © 2023 DOJO004 </p>
+      <a href="https://zeabur.com?referralCode=DOJO004&utm_source=DOJO004" class="block mx-auto w-fit">
+        <img src=https://zeabur.com/deployed-on-zeabur-light.svg alt="Deployed on Zeabur" />
+      </a>
     </div>
   </body>
 </html>
