--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,11 @@
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
     </div>
-    <main class="gap-4 px-5 mx-auto md:flex mt-28">
+    <main class="container gap-4 px-5 mx-auto md:flex mt-28 ">
       <%=render "layouts/sidebar"%>
-      <%= yield %>
+      <div class="w-full px-2 rounded-lg bg-gray-50 ">
+        <%= yield %>
+      </div>
     </main>
     <%= render "layouts/footer"%>
   </body>
