add github svg and add a link will be blue

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -27,6 +27,10 @@ ol {
   @apply text-base md:text-lg lg:text-xl xl:text-2xl  list-disc
 }
 
+.trix-content a{
+  @apply text-blue-500  
+}
+
 figure img {
   @apply mx-auto !important
 }
