--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -8,9 +8,9 @@
       <li>喜歡調酒</li>
       <li>Rails、Nextjs、TypeScript</li>
     </ul>
-    <div class="mt-4">
+    <div class="mx-auto mt-4 w-fit">
       <%= link_to "https://github.com/DOJO004", target: "_blank", class:"w-fit block" do%>
-        <%= image_tag "github.png", class:"w-8 md:w-10 lg:w-12 xl:w-16"%>
+        <%= image_tag "icons/github.svg", class:"w-8 md:w-10 lg:w-12 xl:w-16"%>
       <% end %>
     </div>
     <% if current_user %>
