--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -8,7 +8,7 @@
 }
 
 h1 {
-  @apply text-4xl md:text-5xl lg:text-6xl xl:text-7xl border-b !important
+  @apply text-4xl md:text-5xl lg:text-6xl xl:text-7xl border-b my-4 !important
 }
 
 h2 {
@@ -21,6 +21,10 @@ h3 {
 
 ol {
   @apply text-base md:text-lg lg:text-xl xl:text-2xl list-decimal
+}
+
+.trix-content h1 {
+  @apply text-2xl md:text-3xl lg:text-4xl xl:text-5xl mt-4
 }
 
 .trix-content ul {
