fix add trix-tool-bar-1 z-10

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -13,6 +13,8 @@
     <h1>
       <%= @article.title%>
     </h1>
-    <%= @article.content%>
+    <div class="relative">
+      <%= @article.content%>
+    </div>
   </div>
 </div>
