--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,4 @@
-<div class="w-full">
+<div class="w-full" data-controller="google-prettify">
   <div class="flex justify-between">
     <%= link_to articles_path do%>
       <%= image_tag "icons/back.svg"%>
