--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model:@article, data: {turbo: false}) do |f|%>
+<%= form_with(model:@article, data: {turbo: false, controller: "google-prettify"}) do |f|%>
   <div class="my-4">
     <%= f.label :cover_photo%>
     <%= f.file_field :cover_photo, class:"w-full rounded-md p-2"%>
