--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,18 +11,19 @@
     <%# adsense %>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7844247037688110"
      crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <div>
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
-    </div>
-    <main class="container gap-4 px-5 mx-auto md:flex mt-28 ">
-      <%=render "layouts/sidebar"%>
-      <div class="w-full px-2 rounded-lg bg-gray-50 ">
-        <%= yield %>
+    <%# google prettify %>
+    <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
+    <body>
+      <div>
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
       </div>
-    </main>
-    <%= render "layouts/footer"%>
-  </body>
-</html>
+      <main class="container gap-4 px-5 mx-auto md:flex mt-28 ">
+        <%=render "layouts/sidebar"%>
+        <div class="w-full px-2 rounded-lg bg-gray-50 ">
+          <%= yield %>
+        </div>
+      </main>
+      <%= render "layouts/footer"%>
+    </body>
+  </html>
