style: add article title font size

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,10 +10,10 @@
     <% end %>
   </div>
   <div>
-    <h1>
+    <h1 class="text-3xl font-bold md:text-4xl lg:text-5xl">
       <%= @article.title%>
     </h1>
-    <div class="relative">
+    <div class="relative mt-8">
       <%= @article.content%>
     </div>
   </div>
