--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,9 @@
         <p class="notice"><%= notice %></p>
         <p class="alert"><%= alert %></p>
       </div>
-      <main class="container gap-4 px-5 mx-auto md:flex mt-28 ">
+      <main class="container gap-4 px-5 mx-auto md:gap-8 md:flex mt-28 ">
         <%=render "layouts/sidebar"%>
-        <div class="w-full px-2 rounded-lg bg-gray-50 ">
+        <div class="w-full px-2 mt-4 rounded-lg bg-gray-50 ">
           <%= yield %>
         </div>
       </main>
